--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/Assets/AssetStoreTools*
-/Assets/Packages/
+Assets/AssetStoreTools*
+Assets/Packages/
 
 # Visual Studio cache directory
 .vs/
