--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-Assets/AssetStoreTools*
-Assets/Packages/
+Major Production/Assets/AssetStoreTools*
+Major Production/Assets/Packages/
 
 # Visual Studio cache directory
 .vs/
