Also ignoring /Packages/ folder in Unity folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /[Bb]uilds/
 Major Production/Assets/AssetStoreTools*
 Major Production/Assets/Packages/
+Major Production/Packages/
 
 # Visual Studio cache directory
 .vs/
