--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ sysinfo.txt
 # VS code maps
 # Might make exception in Docs folder if needed?
 *.dgml
+Major Production/Assets/Environment/Resources/Prefabs/Placeholder Prefabs.meta
